--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,6 +9,7 @@ phases:
   build:
     commands:
     - npm run build
+    - find . -mtime +10950 -print -exec touch {} \;
   post_build:
     commands:
     - npm run test
