構築 パイプラインの構築

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "test": "npm-run-all test:*",
     "test:hello_world": "mocha sam-app/hello_world/tests/*",
     "coverage": "npm-run-all coverage:*",
-    "coverage:hello_world": "nyc --reporter=html --reporter=text mocha sam-app/hello_world/tests/*"
+    "coverage:hello_world": "nyc --reporter=html --reporter=text mocha sam-app/hello_world/tests/*",
+    "package": "sam package --template-file sam-app/template.yaml --s3-bucket nodejs-hands-on --output-template-file sam-app/packaged.yaml",
+    "deploy:dev": "sam deploy --template-file sam-app/packaged.yaml --stack-name nodejs-hands-on-development --capabilities CAPABILITY_IAM"
   },
   "repository": {
     "type": "git",
