--- a/sam-app/todo/package.json
+++ b/sam-app/todo/package.json
@@ -12,16 +12,28 @@
   },
   "config": {
     "region": "ap-northeast-1",
-    "functionName": "GetAllFunction",
+    "create": "CreateFunction",
+    "getAll": "GetAllFunction",
+    "getActive": "GetActiveFunction",
+    "updateActive": "UpdateActiveFunction",
+    "getComplete": "GetCompleteFunction",
+    "markComplete": "MarkCompleteFunction",
+    "deleteComplete": "DeleteCompleteFunction",
     "localDb": "dynamodb"
   },
   "scripts": {
     "test": "mocha tests/unit/",
-    "lint": "eslint ./",
+    "lint": "eslint app.js tests/unit/*",
     "coverage": "nyc --reporter=html --reporter=text mocha tests/unit/",
     "pre-commit": "npm run lint",
     "pre-push": "npm test",
-    "local": "sam local invoke $npm_package_config_functionName -t ../template.yaml -e event_file.json --env-vars ../env.json --docker-network lambda-local",
+    "local:create": "sam local invoke $npm_package_config_create -t ../template.yaml -e ./tests/create_event_file.json --env-vars ../env.json --docker-network lambda-local",
+    "local:getAll": "sam local invoke $npm_package_config_getAll -t ../template.yaml -e ./tests/event_file.json --env-vars ../env.json --docker-network lambda-local",
+    "local:getActive": "sam local invoke $npm_package_config_getActive -t ../template.yaml -e ./tests/event_file.json --env-vars ../env.json --docker-network lambda-local",
+    "local:updateActive": "sam local invoke $npm_package_config_updateActive -t ../template.yaml -e ./tests/update_active_event_file.json --env-vars ../env.json --docker-network lambda-local",
+    "local:getComplete": "sam local invoke $npm_package_config_getComplete -t ../template.yaml -e ./tests/event_file.json --env-vars ../env.json --docker-network lambda-local",
+    "local:markComplete": "sam local invoke $npm_package_config_markComplete -t ../template.yaml -e ./tests/mark_complete_event_file.json --env-vars ../env.json --docker-network lambda-local",
+    "local:deleteComplete": "sam local invoke $npm_package_config_deleteComplete -t ../template.yaml -e ./tests/event_file.json --env-vars ../env.json --docker-network lambda-local",
     "local-api": "sam local start-api -p 3001 -t ../template.yaml --env-vars ../env.json --docker-network lambda-local",
     "create-local-network": "docker network create lambda-local",
     "create-local-db": "docker run -d -v \"$PWD\":/dynamodb_local_db -p 8000:8000 --network lambda-local --name $npm_package_config_localDb cnadiminti/dynamodb-local",
@@ -31,6 +43,7 @@
     "stop-local-db": "docker stop $npm_package_config_localDb",
     "db-tables": "aws --region $npm_package_config_region dynamodb list-tables --endpoint-url http://localhost:8000",
     "db-migrate-create": "node ./scripts/migration.js create",
+    "db-migrate-seed": "node ./scripts/migration.js seed",
     "db-migrate-delete": "node ./scripts/migration.js delete"
   },
   "devDependencies": {
