--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pre-push": "npm run coverage",
     "build": "npm-run-all build:*",
     "build:hello_world": "cd sam-app/hello_world ; npm install",
+    "build:todo": "cd sam-app/todo ; npm install",
     "lint": "npm-run-all lint:*",
     "lint:hello_world": "eslint sam-app/hello_world/app.js",
     "lint:todo": "eslint sam-app/todo/app.js",
@@ -21,6 +22,7 @@
     "coverage:hello_world": "nyc --reporter=html --reporter=text mocha sam-app/hello_world/tests/*",
     "coverage:todo": "nyc --reporter=html --reporter=text mocha sam-app/todo/tests/*",
     "package": "sam package --template-file sam-app/template.yaml --s3-bucket nodejs-hands-on --output-template-file sam-app/packaged.yaml",
+    "package:patch": "find . -mtime +10950 -print -exec touch {} \\;",
     "deploy:dev": "sam deploy --template-file sam-app/packaged.yaml --stack-name nodejs-hands-on-development --capabilities CAPABILITY_IAM"
   },
   "repository": {
