--- a/sam-app/fizz_buzz/.eslintrc
+++ b/sam-app/fizz_buzz/.eslintrc
@@ -4,7 +4,5 @@
   "parserOptions": {},
   "env": {"mocha": true},
   "globals": {},
-  "rules": {
-    "indent": ["error", 4]
-  }
+  "rules": {}
 }
