--- a/package.json
+++ b/package.json
@@ -31,15 +31,17 @@
   },
   "homepage": "https://github.com/hiroshima-arc/aws_sam_nodejs_hands-on#readme",
   "devDependencies": {
-    "chai": "^4.1.2",
-    "eslint": "^5.4.0",
+    "chai": "^4.2.0",
+    "eslint": "^5.7.0",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
-    "husky": "^1.0.0-rc.13",
+    "husky": "^1.1.2",
     "mocha": "^5.2.0",
     "npm-run-all": "^4.1.3",
     "nyc": "^12.0.2"
-  }
+  },
+  "dependencies": {}
 }
